--- a/main.html
+++ b/main.html
@@ -377,6 +377,7 @@
                                  if(target.same(nextTarget)) {
                                      target.double();
                                      nextTarget.state = STATE.DELETED;
+				     changes ++;
                                  }
                              }
 
