--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="https://unpkg.com/vue"></script>
+        <script src="https://unpkg.com/vue@2.7.16/dist/vue.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
